--- a/view/index.html
+++ b/view/index.html
@@ -10,10 +10,13 @@
 <div id="calculator">
     <button class="numpad-button">|x|</button>
     <div class="screen">
-        <h4 id="screen2">1+</h4>
+        <div class="upper-screen">
+            <h4 id="screen2"></h4>
+            <h4 id="screen3"></h4>
+        </div>
         <h2 id="screen">0</h2>
     </div>
-    <button class="numpad-button">←</button>
+    <button class="numpad-button" id="delete-button">←</button>
 
     <button class="numpad-button">1/x</button>
 
@@ -21,15 +24,15 @@
     <button class="numpad-button numpad-number">2</button>
     <button class="numpad-button numpad-number">3</button>
 
-    <button class="numpad-button">+</button>
+    <button class="numpad-button" doubleOperand>+</button>
 
-    <button class="numpad-button">log</button>
+    <button class="numpad-button" doubleOperand>log</button>
 
     <button class="numpad-button numpad-number">4</button>
     <button class="numpad-button numpad-number">5</button>
     <button class="numpad-button numpad-number">6</button>
 
-    <button class="numpad-button">-</button>
+    <button class="numpad-button" doubleOperand>-</button>
 
     <button class="numpad-button">π</button>
 
@@ -37,21 +40,21 @@
     <button class="numpad-button numpad-number">8</button>
     <button class="numpad-button numpad-number">9</button>
 
-    <button class="numpad-button">*</button>
+    <button class="numpad-button" doubleOperand>*</button>
 
     <button class="numpad-button">е</button>
 
     <button class="numpad-button numpad-number">0</button>
-    <button class="numpad-button">.</button>
+    <button class="numpad-button" id="dot-button">.</button>
     <button class="numpad-button" id="reset">C</button>
 
-    <button class="numpad-button">/</button>
+    <button class="numpad-button" doubleOperand>/</button>
 
-    <button class="numpad-button">mod</button>
-    <button class="numpad-button">x^y</button>
-    <button class="numpad-button">x^1/y</button>
+    <button class="numpad-button" doubleOperand>mod</button>
+    <button class="numpad-button" doubleOperand>x^y</button>
+    <button class="numpad-button" doubleOperand>x^1/y</button>
     <button class="numpad-button">n!</button>
-    <button class="numpad-button">=</button>
+    <button class="numpad-button" id="calculate">=</button>
 </div>
 
 <script src="../js/app.js"></script>
